# mooncell

./: Cargo.toml  README.md  provider.rs
.github/: main.workflow
.github/actions/build-and-test/: Dockerfile  entrypoint.sh
src/: config.rs  core.rs  dns_proto.rs  doh_json.rs  doh_protocol.rs  lib.rs  logging.rs  main.rs
src/config/: cli.rs  config.rs  config_provider.rs  defaults.rs  mod.rs
src/core/: mod.rs  processor.rs  protocol.rs  provider.rs  request_handler.rs  resolver.rs  response.rs
src/dns/: mod.rs  protocol.rs
src/dns_proto/: mod.rs
src/doh/: protocol.rs
src/doh_json/: mod.rs  protocol.rs  provider.rs  resolver.rs  response.rs
src/doh_wire/: mod.rs
src/logging/: mod.rs
src/net/: mod.rs  request.rs  request_responder.rs  server.rs  utils.rs
test/fixtures/: README.md
