[package]
name = "mooncell"
version = "1.0.0"
description = "A DNS-over-HTTPS server"
authors = ["Ivan De Marino <detronizator@gmail.com>"]
#edition = "2018"

[dependencies]
clap = "2.32.0"
log = "0.4.6"
log4rs = "0.8.1"
exitcode = "1.1.2"
downcast-rs = "1.0.3"

crossbeam-channel = "0.3.8"

trust-dns-proto = { version = "0.7.1", features = ["dnssec"] }

http = "0.1.16"
curl= { version = "0.4.20", features = ["ssl", "static-curl", "static-ssl"] }

ipnet = "2.0.0"

threadpool = "1.7.1"
num_cpus = "1.10.0"

serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"

[lib]
name = "mooncell"
path = "src/lib.rs"

[[bin]]
name = "mooncell"
path = "src/main.rs"

[profile.release]
lto = true
panic = 'abort'
